# mcst-internship-trial

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: trunk.yml
cmake/: BuildFlags.cmake  FindCatch.cmake  FindGTest.cmake
res/test/: input-empty.txt  output-singleton.txt
script/test/: output-emoji.txt  output-singleton.txt  random.sh  validate.sh
src/: main.cpp  smart.cpp  smart.hpp
src/app/: app.cpp  app.hpp  combine.cpp  combine.hpp  core.hpp  defer.hpp  math.hpp  process.cpp  process.hpp  silly.cpp  silly.hpp  smart.cpp  smart.hpp
test/: test.cpp
